--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
                     <br>
                     Full-stack web developer
                     <br>
-                    Node.js, Postgres, HTML, CSS
+                    Node.js, Postgres, HTML5, JS, AJAX, CSS
                     <br>
                     <a href="https://veri.ly/"><i class="fa fa-globe"></i></a>
                     <a href="https://veri.ly/">veri.ly</a>
@@ -103,7 +103,7 @@ layout: default
                     <br>
                     Node.js, Redis, Git
                     <br>
-                    Pushes webpage updates to users in realtime
+                    Pushes webpage markup updates to users in realtime
                 </div>
                 
             </div>
