--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<main class="home container">
+<main role="main" class="home container" id="content">
     <h1>Alex Greenland</h1>
     <section class="vitals">
         <div class="row">
