--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ layout: default
     <!-- / .vitals -->
     
     <section class="projects">
+        <h2>Projects</h2>
         <!-- box.verily -->
         <section class="box verily">
             <h3>
@@ -297,8 +298,8 @@ layout: default
         <!-- / .box.ifestival -->
         
         <section class="awards">
+            <h2>Awards</h2>
             <section class="award">
-                <h2>Awards</h2>
                 <h3>The Department of Energy &amp; Climate Change Prize</h3>
                 <p class="lead">
                     Awarded for the best student performance in the final year of the BSc Computer Science programme.
