--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
             </div>
             <div class="col-sm-6">
                 <p class="lead langs">
-                    <a href="http://nodejs.org/">Node.js</a>, Java <a href="http://www.oracle.com/technetwork/java/javase/overview/index.html">SE</a> &amp; <a href="http://www.oracle.com/technetwork/java/javaee/overview/index.html">EE</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a>
+                    <a href="http://nodejs.org/">Node.js</a>, Java <a href="http://www.oracle.com/technetwork/java/javase/overview/index.html">SE</a> &amp; <a href="http://www.oracle.com/technetwork/java/javaee/overview/index.html">EE</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a><small>&hellip;</small>
                 </p>
             </div>
         </div>
