update with awards

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
             </div>
             <div class="col-sm-6">
                 <p class="lead langs">
-                    <a href="http://nodejs.org/">Node.js</a>, Java <a href="http://www.oracle.com/technetwork/java/javase/overview/index.html">SE</a> &amp; <a href="http://www.oracle.com/technetwork/java/javaee/overview/index.html">EE</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a><small>&hellip;</small>
+                    <a href="http://nodejs.org/">Node.js</a>, <a href="http://rubyonrails.org/">Ruby on Rails</a>, <a href="http://www.oracle.com/technetwork/java/">Java</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a>
                 </p>
             </div>
         </div>
@@ -55,6 +55,35 @@ layout: default
             </div>
         </section>
         <!-- / .box.verily -->
+		
+        <!-- box.faveparts -->
+        <section class="box faveparts">
+            <h3>
+                <a href="https://fave.parts/" class="title faveparts-logo" title="Fave Parts">
+                    Fave Parts
+                </a>
+            </h3>
+        
+            <div class="foot">
+                2015 &ndash;
+                <br>
+                Creator and contributor
+                <br>
+                HTML5, Jekyll, CSS3, JS
+                <p class="lead">
+                    Responsive web application to catalogue favourite sequences of media.
+                </p>
+                <span class="outlink">
+                    <i class="fa fa-globe"></i>
+                    <a href="https://fave.parts/">Fave Parts</a>
+                </span>
+                <span class="outlink">
+                    <i class="fa fa-github"></i>
+                    <a href="https://github.com/alexgreenland/fave-parts">Source</a>
+                </span>
+            </div>
+        </section>
+        <!-- / .box.faveparts -->
     
         <!-- box.urlcanon -->
         <section class="box urlcanon">
@@ -303,6 +332,13 @@ layout: default
     <section class="awards">
         <h2>Awards</h2>
         <section class="award">
+            <h3>Richard Newitt Bursary</h3>
+            <p class="lead">
+                Recipient of the Southampton postgraduate bursary for the strongest capability of demonstrable effect in the field of web technology.
+            </p>
+        </section>
+		
+        <section class="award">
             <h3>The Department of Energy &amp; Climate Change Prize</h3>
             <p class="lead">
                 Awarded for the best student performance in the final year of the BSc Computer Science programme.
@@ -313,6 +349,13 @@ layout: default
             <h3>The Fivium Prize</h3>
             <p class="lead">
                 Awarded for the best overall performance by a final year Computing student on the Enterprise Systems Development module of BSc Computer Science.
+            </p>
+        </section>
+		
+        <section class="award">
+            <h3>Dux (Valedictorian), BSc Computer Science</h3>
+            <p class="lead">
+               Highest-ranking student of BSc Computer Science at the University of Surrey.
             </p>
         </section>
     </section>
