--- a/index.html
+++ b/index.html
@@ -3,27 +3,57 @@ layout: default
 ---
 
 <main role="main" class="home container" id="content">
-    <h1>Alex Greenland</h1>
     <section class="vitals">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-md-push-9">
+				<img src="/images/self.jpg" class="img-responsive self-image">
+            </div>
+            <div class="info col-xs-12 col-sm-12 col-md-9 col-md-pull-3">
+				<h1>Alex Greenland</h1>
                 <p class="lead profession">
                     Web technologist, computer scientist, software engineer
                 </p>
-            </div>
-            <div class="col-sm-6">
                 <p class="lead langs">
-                    <a href="http://nodejs.org/">Node.js</a>, <a href="http://rubyonrails.org/">Ruby on Rails</a>, <a href="http://www.oracle.com/technetwork/java/">Java</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a>
+                    <a href="http://www.w3.org/TR/html5/">HTML(5)</a>, <a href="http://www.ecma-international.org/publications/standards/Ecma-262.htm">JavaScript</a>, <a href="http://www.w3.org/standards/techs/css">CSS(3)</a>, <a href="http://nodejs.org/">Node.js</a>, <a href="http://rubyonrails.org/">Ruby on Rails</a>, <a href="http://www.oracle.com/technetwork/java/">Java</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a>
                 </p>
+		        <p class="lead">
+		            <i class="fa fa-github"></i> <a href="https://github.com/alexgreenland">alexgreenland</a>
+		            <i class="fa fa-twitter"></i> <a href="https://twitter.com/alexphoenix">alexphoenix</a>
+		            <i class="fa fa-globe"></i> <a href="http://ajrg.co">ajrg.co</a>
+		        </p>
             </div>
         </div>
-        <p class="lead">
-            <i class="fa fa-github"></i> <a href="https://github.com/alexgreenland">alexgreenland</a>
-            <i class="fa fa-twitter"></i> <a href="https://twitter.com/alexphoenix">alexphoenix</a>
-            <i class="fa fa-globe"></i> <a href="http://ajrg.co">ajrg.co</a>
-        </p>
     </section>
     <!-- / .vitals -->
+	
+	<section class="industry">
+		<h2>Industry</h2>
+		
+        <section class="box singletrack">
+            <h3>
+                <a href="http://singletrack.com/" class="title singletrack-logo" title="Singletrack">
+                </a>
+            </h3>
+        
+            <div class="foot">
+                December 2014 &ndash;
+                <br>
+                Developer
+                <br>
+                HTML(5), JavaScript, CSS(3), Visualforce, Apex, SOQL, Ruby on Rails
+                <p class="lead">
+                    Leading the UI and UX efforts for Singletrack, the leveraged CRM for capital markets. Built as a flexible revenue-driven Salesforce-based platform for sell-side firms, Singletrack maximises the return on their sales, research and corporate services. Responsible for developing the platform in HTML(5), JavaScript, CSS(3), Visualforce, Apex and SOQL; and development of job processing, email distribution and aggregation servers in Ruby on Rails.
+                </p>
+                <span class="outlink">
+                    <i class="fa fa-globe"></i>
+                    <a href="http://singletrack.com/">Singletrack</a>
+                </span>
+            </div>
+        </section>
+        <!-- / .box.verily -->
+		
+	</section>
+	<!-- / .industry -->
     
     <section class="projects">
         <h2>Projects</h2>
