Break text nicely

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
                     Web technologist, computer scientist, software engineer
                 </p>
                 <p class="lead langs">
-                    <a href="http://www.w3.org/TR/html5/">HTML(5)</a>, <a href="http://www.ecma-international.org/publications/standards/Ecma-262.htm">JavaScript</a>, <a href="http://www.w3.org/standards/techs/css">CSS(3)</a>, <a href="http://nodejs.org/">Node.js</a>, <a href="http://rubyonrails.org/">Ruby on Rails</a>, <a href="http://www.oracle.com/technetwork/java/">Java</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a>
+                    <a href="http://www.w3.org/TR/html5/">HTML(5)</a>, <a href="http://www.ecma-international.org/publications/standards/Ecma-262.htm">JavaScript</a>, <a href="http://www.w3.org/standards/techs/css">CSS(3)</a>, <a href="http://nodejs.org/">Node.js</a>, <span class="visible-xs line-height-0"><br></span><a href="http://rubyonrails.org/">Ruby on Rails</a>, <a href="http://www.oracle.com/technetwork/java/">Java</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a>
                 </p>
 		        <p class="lead">
 		            <i class="fa fa-github"></i> <a href="https://github.com/alexgreenland">alexgreenland</a>
