--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <section class="vitals">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-3 col-md-push-9">
-				<img src="/images/self.jpg" class="img-responsive self-image">
+				<img src="/images/self-2.jpg" class="img-responsive self-image">
             </div>
             <div class="info col-xs-12 col-sm-12 col-md-9 col-md-pull-3">
 				<h1>Alex Greenland</h1>
