nav links; faveparts links

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ layout: default
 		        <p class="lead">
 		            <i class="fa fa-github"></i> <a href="https://github.com/alexgreenland">alexgreenland</a>
 		            <i class="fa fa-twitter"></i> <a href="https://twitter.com/alexphoenix">alexphoenix</a>
+		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a href="https://fave.parts/ajrg/music/">ajrg</a>
 		            <i class="fa fa-globe"></i> <a href="http://ajrg.co">ajrg.co</a>
 		        </p>
             </div>
@@ -26,7 +27,14 @@ layout: default
     </section>
     <!-- / .vitals -->
 	
-	<section class="industry">
+	<ul class="nav-linear">
+		<li role="presentation"><a href="#industry">Industry</a></li>
+		<li role="presentation"><a href="#projects">Projects</a></li>
+		<li role="presentation"><a href="#education">Education</a></li>
+		<li role="presentation"><a href="#awards">Awards</a></li>
+	</ul>
+	
+	<section id="industry" class="industry">
 		<h2>Industry</h2>
 		
         <section class="box singletrack">
@@ -55,7 +63,7 @@ layout: default
 	</section>
 	<!-- / .industry -->
     
-    <section class="projects">
+    <section id="projects" class="projects">
         <h2>Projects</h2>
         <!-- box.verily -->
         <section class="box verily">
@@ -89,6 +97,7 @@ layout: default
         <!-- box.faveparts -->
         <section class="box faveparts">
             <h3>
+				<a href="https://fave.parts/" class="title faveparts-logo" title="Fave Parts"><span class="fa-stack fa-stack-ctr-1x faveparts-logotype-adjacent"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span></a>
                 <a href="https://fave.parts/" class="title faveparts-logo" title="Fave Parts">
                     Fave Parts
                 </a>
@@ -320,7 +329,7 @@ layout: default
         </section>
         <!-- / .box.ifestival -->
     </section>
-    <section class="education">
+    <section id="education" class="education">
         <h2>Education</h2>
         <!-- box.soton -->
         <section class="box soton">
@@ -359,7 +368,7 @@ layout: default
         <!-- / .box.surrey -->
     </section>
         
-    <section class="awards">
+    <section id="awards" class="awards">
         <h2>Awards</h2>
         <section class="award">
             <h3>Richard Newitt Bursary</h3>
