--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@ layout: default
                     <a href="https://fave.parts/">Fave Parts</a>
                 </span>
                 <span class="outlink">
+                    <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span>
+					<a href="https://fave.parts/ajrg/music/">ajrg</a>
+                </span>
+                <span class="outlink">
                     <i class="fa fa-github"></i>
                     <a href="https://github.com/alexgreenland/fave-parts">Source</a>
                 </span>
