better section links

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@ layout: default
     </section>
     <!-- / .vitals -->
 	
-	<ul class="nav-linear">
-		<li role="presentation"><a href="#industry">Industry</a></li>
-		<li role="presentation"><a href="#projects">Projects</a></li>
-		<li role="presentation"><a href="#education">Education</a></li>
-		<li role="presentation"><a href="#awards">Awards</a></li>
+	<ul class="nav-linear lead">
+		<li role="presentation"><span class="pilcrow">¶</span><a href="#industry">Industry</a></li>
+		<li role="presentation"><span class="pilcrow">¶</span><a href="#projects">Projects</a></li>
+		<li role="presentation"><span class="pilcrow">¶</span><a href="#education">Education</a></li>
+		<li role="presentation"><span class="pilcrow">¶</span><a href="#awards">Awards</a></li>
 	</ul>
 	
 	<section id="industry" class="industry">
