--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ layout: default
                 <br>
                 <a href="http://www.ecs.soton.ac.uk/">ECS</a>, <a href="http://www.southampton.ac.uk/">University of Southampton</a>
                 <p class="lead">
-                    Developed an understanding of current and emerging technologies that support web-based software systems.
+                    Developed an understanding of current and emerging technologies that support web-based software systems. An intensive high-level course which covered the current and emerging technologies used to support web-based software systems. Studied web service markup languages including XML, XSL and RDF, and related topics of security, cryptography, interaction design and assistive technologies, taught by leading experts in these areas.
                 </p>
             </div>
         </section>
