embolden education parts

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ layout: default
             <div class="foot">
                 2013 &ndash; 2014
                 <br>
-                Distinction. 81% aggregate
+                <strong>Distinction. 81% aggregate</strong>
                 <br>
                 <a href="http://www.ecs.soton.ac.uk/">ECS</a>, <a href="http://www.southampton.ac.uk/">University of Southampton</a>
                 <p class="lead">
@@ -361,7 +361,7 @@ layout: default
             <div class="foot">
                 2009 &ndash; 2013
                 <br>
-                First Class Honours. 85% aggregate
+                <strong>First Class Honours. 85% aggregate</strong>
                 <br>
                 <a href="http://www.surrey.ac.uk/">University of Surrey</a>
                 <p class="lead">
