--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ layout: default
                     <a href="http://www.w3.org/TR/html5/">HTML(5)</a>, <a href="http://www.ecma-international.org/publications/standards/Ecma-262.htm">JavaScript</a>, <a href="http://www.w3.org/standards/techs/css">CSS(3)</a>, <a href="http://nodejs.org/">Node.js</a>, <span class="visible-xs line-height-0"><br></span><a href="http://rubyonrails.org/">Ruby on Rails</a>, <a href="http://www.oracle.com/technetwork/java/">Java</a>, <a href="http://www.stroustrup.com/C++.html">C++</a>, <a href="http://msdn.microsoft.com/en-us/vstudio/hh341490">C#</a>
                 </p>
 		        <p class="lead">
-		            <i class="fa fa-github"></i> <a href="https://github.com/alexgreenland">alexgreenland</a>
-		            <i class="fa fa-twitter"></i> <a href="https://twitter.com/alexphoenix">alexphoenix</a>
-		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a href="https://fave.parts/ajrg/music/">ajrg</a>
+		            <i class="fa fa-github"></i> <a href="https://github.com/alexgreenland"><span class="text-muted">@</span>alexgreenland</a>
+		            <i class="fa fa-twitter"></i> <a href="https://twitter.com/alexphoenix"><span class="text-muted">@</span>alexphoenix</a><span class="visible-xs line-height-0"><br></span>
+		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a href="https://fave.parts/ajrg/music/"><span class="text-muted">@</span>ajrg</a>
 		            <i class="fa fa-globe"></i> <a href="http://ajrg.co">ajrg.co</a>
 		        </p>
             </div>
