--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
 		        <p class="lead">
 		            <i class="fa fa-github"></i> <a href="https://github.com/alexgreenland"><span class="text-muted">@</span>alexgreenland</a>
 		            <i class="fa fa-twitter"></i> <a href="https://twitter.com/alexphoenix"><span class="text-muted">@</span>alexphoenix</a><span class="visible-xs line-height-0"><br></span>
-		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a href="https://fave.parts/ajrg/music/"><span class="text-muted">@</span>ajrg</a>
+		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a href="https://fave.parts/ajrg/hot-parts/"><span class="text-muted">@</span>ajrg</a>
 		            <i class="fa fa-globe"></i> <a href="http://ajrg.co">ajrg.co</a>
 		        </p>
             </div>
