--- a/index.html
+++ b/index.html
@@ -137,6 +137,8 @@ layout: default
                 2015 &ndash;
                 <br>
                 Author, Personal Project
+                <br>
+                Licence: <a href="https://github.com/alexgreenland/url-canon/blob/master/LICENSE">Apache License 2.0</a>
                 <p class="lead">
                     A lightweight, extensible and reactive model-driven library
                 </p>
