--- a/index.html
+++ b/index.html
@@ -137,10 +137,12 @@ layout: default
                 2015 &ndash;
                 <br>
                 Author, Personal Project
+				<br>
+				JS
                 <br>
                 Licence: <a href="https://github.com/alexgreenland/url-canon/blob/master/LICENSE">Apache License 2.0</a>
                 <p class="lead">
-                    A lightweight, extensible and reactive model-driven library
+                    A lightweight, extensible and reactive model-driven library.
                 </p>
                 <span class="outlink">
                     <i class="fa fa-github"></i>
