--- a/index.html
+++ b/index.html
@@ -414,4 +414,13 @@ layout: default
             </p>
         </section>
     </section>
+	
+	<section class="places">
+	    <h2>Places</h2>
+		<ul class="nav-linear lead">
+			<li role="presentation"><a href="/places/montreal">Montréal</a></li>
+		</ul>
+		
+	</section>
+	
 </main>
