--- a/places/montreal/index.html
+++ b/places/montreal/index.html
@@ -5,7 +5,7 @@ date: 2016-01-12
 ---
 
 <main role="main" class="container" id="content">
-	<h1><a href="/">Alex Greenland</a><span class="text-muted"> / </span>Montréal</h1>
+	<h1><a href="/">Alex Greenland</a><span class="text-muted"> / </span>Places<span class="text-muted"> / </span>Montréal</h1>
 	<p>
 		Updated {{ page.date }}
 	</p>
