--- a/index.html
+++ b/index.html
@@ -417,9 +417,7 @@ layout: default
 	
 	<section class="places">
 	    <h2>Places</h2>
-		<ul class="nav-linear lead">
-			<li role="presentation"><a href="/places/montreal">Montréal</a></li>
-		</ul>
+		<a href="/places/montreal">Montréal</a>
 		
 	</section>
 	
