--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: default
                 </span>
             </div>
         </section>
-        <!-- / .box.verily -->
+        <!-- / .box.singletrack -->
 		
 	</section>
 	<!-- / .industry -->
@@ -80,7 +80,7 @@ layout: default
                 <br>
                 Node.js, Postgres, HTML5, JS, AJAX, CSS
                 <p class="lead">
-                    Lead developer of social, responsive web application for collecting and verifying crowdsourced evidence following natural disasters, offering a more effective humanitarian response. Development is part of a team in ECS at Southampton. UN Office for the Coordination of Humanitarian Affairs (OCHA) intends to utilise Verily in next natural disaster deployment; interest received from government departments and media organisations internationally.
+                    Lead developer of social, responsive web application for collecting and verifying crowdsourced evidence following natural disasters, offering a more effective humanitarian response. Development is part of a team in ECS at Southampton. UN Office for the Coordination of Humanitarian Affairs (OCHA) intends to utilise Verily in next natural disaster deployment; interest received from government departments and media organisations internationally. Featured in <a href="https://www.technologyreview.com/s/537036/online-fact-checking-tool-gets-a-big-test-with-nepal-earthquake/">MIT Technology Review</a>
                 </p>
                 <span class="outlink">
                     <i class="fa fa-globe"></i>
