--- a/places/montreal/index.html
+++ b/places/montreal/index.html
@@ -1,17 +1,131 @@
 ---
-layout: default
+layout: places
 title: Montréal
-date: 2016-01-12
+date: 2016-03-27
 ---
 
-<main role="main" class="container" id="content">
-	<h1><a href="/">Alex Greenland</a><span class="text-muted"> / </span>Places<span class="text-muted"> / </span>Montréal</h1>
-	<p>
-		Updated {{ page.date }}
-	</p>
+<main role="main" class="container-fluid places container-full" id="content">
 	<div class="row">
-		<div class="col-sm-12">
-			<a href="/images/downtown-montreal-from-mount-royal.jpg"><img src="/images/downtown-montreal-from-mount-royal.jpg" class="img-responsive"></a>
-		</div>
+        <div class="hero-container">
+            <div class="hero montreal">
+                <div class="overlay overlay-dark">
+            		<div class="col-sm-12">
+                        <h1>Montréal</h1>
+                        <p class="lead">
+                           Vibrant, hockey-centric, creative
+                        </p>
+                        <p>
+                           The largest city in Québec and second largest in Canada, Montréal boasts a rich and diverse culture. Simultaneously remembering the past and looking to the future, the metropolis is a leading centre of finance, technology and the creative industries. The whole city unites when the <a href="https://en.wikipedia.org/wiki/Montreal_Canadiens">Habs</a> are playing.
+                        </p>
+                        <div class="contributors">
+                            <div class="contributor">
+                                <a href="/" class="contributor-image-container"><img src="/images/self-2.jpg" class="self-image"></a>
+                                <a href="/">Alex Greenland</a>
+                            </div>
+                        </div>
+            		</div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="cards">
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-1.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-2.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-3.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-4.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-5.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-6.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12">
+                <div class="panel panel-default">
+                    <div class="panel-body card card-hero" style="background-image: url(/images/downtown-montreal-from-mount-royal.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-7.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-8.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-9.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-10.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-11.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-12.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-13.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-14.jpg)">
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="panel panel-default">
+                    <div class="panel-body card" style="background-image: url(/images/places/montreal/montreal-15.jpg)">
+                    </div>
+                </div>
+            </div>
+        </div>
+
 	</div>
 </main>
