--- a/places/montreal/index.html
+++ b/places/montreal/index.html
@@ -2,6 +2,8 @@
 layout: places
 title: Montréal
 date: 2016-03-27
+thumb: /images/downtown-montreal-from-mount-royal.jpg
+description: The largest city in Québec and second largest in Canada, Montréal boasts a rich and diverse culture. Simultaneously remembering the past and looking to the future, the metropolis is a leading centre of finance, technology and the creative industries. The whole city unites when the are playing.
 ---
 
 <main role="main" class="container-fluid places container-full" id="content">
