--- a/projects/tube-visualisation/index.html
+++ b/projects/tube-visualisation/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
+title: Tube Visualisation
 ---
 
-<main role="main" class="container" id="content">
+<main role="main" class="container-fluid" id="content">
     <div class="tube visualisation-container">
         
     </div>
