--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@ layout: default
                     Web technologist
                 </p>
 		        <p class="lead">
-		            <i class="fa fa-github"></i> <a href="https://github.com/alexgreenland"><span class="text-muted">@</span>alexgreenland</a>
-		            <i class="fa fa-twitter"></i> <a href="https://twitter.com/ajrgreenland"><span class="text-muted">@</span>ajrgreenland</a><span class="visible-xs line-height-0"><br></span>
-					<i class="fa fa-camera icon-unsplash"></i> <a href="https://unsplash.com/@ajrg"><span class="text-muted">@</span>ajrg</a>
-		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a href="https://fave.parts/ajrg/hot-parts/"><span class="text-muted">@</span>ajrg</a>
+		            <i class="fa fa-github"></i> <a class="github-link" href="https://github.com/alexgreenland"><span class="text-muted">@</span>alexgreenland</a>
+		            <i class="fa fa-twitter"></i> <a class="twitter-link" href="https://twitter.com/ajrgreenland"><span class="text-muted">@</span>ajrgreenland</a><span class="visible-xs line-height-0"><br></span>
+					<i class="fa fa-camera icon-unsplash"></i> <a class="unsplash-link" href="https://unsplash.com/@ajrg"><span class="text-muted">@</span>ajrg</a>
+		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a class="fave-parts-link" href="https://fave.parts/ajrg/hot-parts/"><span class="text-muted">@</span>ajrg</a>
 		            <i class="fa fa-globe"></i> <a href="http://ajrg.co">ajrg.co</a>
 		        </p>
 				<ul class="nav-linear lead">
-					<li role="presentation"><span class="pilcrow">¶</span><a href="#industry">Industry</a></li>
-					<li role="presentation"><span class="pilcrow">¶</span><a href="#projects">Projects</a></li>
-					<li role="presentation"><span class="pilcrow">¶</span><a href="#education">Education</a></li>
-					<li role="presentation"><span class="pilcrow">¶</span><a href="#awards">Awards</a></li>
+					<li role="presentation"><span class="pilcrow">¶</span><a class="industry-jumplink" href="#industry">Industry</a></li>
+					<li role="presentation"><span class="pilcrow">¶</span><a class="projects-jumplink" href="#projects">Projects</a></li>
+					<li role="presentation"><span class="pilcrow">¶</span><a class="education-jumplink" href="#education">Education</a></li>
+					<li role="presentation"><span class="pilcrow">¶</span><a class="awards-jumplink" href="#awards">Awards</a></li>
 				</ul>
             </div>
         </div>
@@ -37,7 +37,7 @@ layout: default
         <section class="box singletrack">
             <h3>
                 {% include timeline-interchange.html %}
-                <a href="http://singletrack.com/" class="title singletrack-logo" title="Singletrack">
+                <a href="http://singletrack.com/" class="title singletrack-logo singletrack-link" title="Singletrack">
                 </a>
             </h3>
             
