--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: default
 		        <p class="lead">
 		            <i class="fa fa-github"></i> <a class="github-link" href="https://github.com/alexgreenland"><span class="text-muted">@</span>alexgreenland</a>
 		            <i class="fa fa-twitter"></i> <a class="twitter-link" href="https://twitter.com/ajrgreenland"><span class="text-muted">@</span>ajrgreenland</a><span class="visible-xs line-height-0"><br></span>
+					<i class="fa fa-spotify icon-spotify"></i> <a class="spotify-link" href="https://open.spotify.com/user/alexphoenix"><span class="text-muted">@</span>alexphoenix</a>
 					<i class="fa fa-camera icon-unsplash"></i> <a class="unsplash-link" href="https://unsplash.com/@ajrg"><span class="text-muted">@</span>ajrg</a>
 		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a class="fave-parts-link" href="https://fave.parts/ajrg/hot-parts/"><span class="text-muted">@</span>ajrg</a>
 		            <i class="fa fa-globe"></i> <a href="http://ajrg.co">ajrg.co</a>
