--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@ layout: default
                     Web technologist
                 </p>
 		        <p class="lead">
-		            <i class="fa fa-twitter"></i> <a class="twitter-link" href="https://twitter.com/ajrgreenland"><span class="text-muted">@</span>ajrgreenland</a>
+		            <i class="fa fa-twitter"></i> <a class="twitter-link" href="https://twitter.com/ajrgd"><span class="text-muted">@</span>ajrgrd</a>
 		            <i class="fa fa-github"></i> <a class="github-link" href="https://github.com/alexgreenland"><span class="text-muted">@</span>alexgreenland</a><span class="visible-xs line-height-0"><br></span>
 					<i class="fa fa-spotify icon-spotify"></i> <a class="spotify-link" href="https://open.spotify.com/user/alexphoenix"><span class="text-muted">@</span>alexphoenix</a>
 					<i class="fa fa-camera icon-unsplash"></i> <a class="unsplash-link" href="https://unsplash.com/@ajrg"><span class="text-muted">@</span>ajrg</a><span class="visible-xs line-height-0"><br></span>
-		            <span class="fa-stack fa-stack-ctr-1x"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-music fa-stack-1x fa-stack-point5x fave-parts-quavers"></i></span> <a class="fave-parts-link" href="https://fave.parts/ajrg/hot-parts/"><span class="text-muted">@</span>ajrg</a>
-		            <i class="fa fa-globe"></i> <a href="http://ajrg.co">ajrg.co</a>
 		        </p>
 				<ul class="nav-linear lead">
-					<li role="presentation"><span class="pilcrow">¶</span><a class="industry-jumplink" href="#industry">Industry</a></li>
-					<li role="presentation"><span class="pilcrow">¶</span><a class="projects-jumplink" href="#projects">Projects</a></li>
-					<li role="presentation"><span class="pilcrow">¶</span><a class="education-jumplink" href="#education">Education</a></li>
-					<li role="presentation"><span class="pilcrow">¶</span><a class="awards-jumplink" href="#awards">Awards</a></li>
+					<li role="presentation"><a class="industry-jumplink" href="#industry">Industry</a></li>
+					<li role="presentation"><span class="middot">&middot;</span> <a class="projects-jumplink" href="#projects">Projects</a></li>
+					<li role="presentation"><span class="middot">&middot;</span> <a class="education-jumplink" href="#education">Education</a></li>
+					<li role="presentation"><span class="middot">&middot;</span> <a class="awards-jumplink" href="#awards">Awards</a></li>
 				</ul>
             </div>
         </div>
@@ -161,35 +159,6 @@ layout: default
             </div>
         </section>
         <!-- / .box.faveparts -->
-		
-        <!-- box.subnecto -->
-        <section class="box subnecto">
-            <h3 class="plain title">
-                {% include timeline-interchange.html %}
-                Subnecto
-            </h3>
-            <div class="timeline-item foot">
-                <strong>Author</strong>
-                <br>
-                2015 &ndash;
-				<br>
-				JS
-                <br>
-                Licence: <a href="https://github.com/alexgreenland/subnecto/blob/master/LICENSE">Apache License 2.0</a>
-                <p class="lead">
-                    A lightweight, extensible and reactive model-driven library.
-                </p>
-                <span class="outlink">
-                    <i class="fa fa-github"></i>
-                    <a href="https://github.com/alexgreenland/subnecto">Source</a>
-                </span>
-                <span class="outlink">
-                    <i class="fa fa-globe"></i>
-                    <a href="/subnecto">Examples</a>
-                </span>
-            </div>
-        </section>
-        <!-- / .box.subnecto -->
     
         <!-- box.urlcanon -->
         <section class="box urlcanon">
