--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
                     Web technologist
                 </p>
 		        <p class="lead">
-		            <i class="fa fa-twitter"></i> <a class="twitter-link" href="https://twitter.com/ajrgd"><span class="text-muted">@</span>ajrgrd</a>
+		            <i class="fa fa-twitter"></i> <a class="twitter-link" href="https://twitter.com/ajrgd"><span class="text-muted">@</span>ajrgd</a>
 		            <i class="fa fa-github"></i> <a class="github-link" href="https://github.com/alexgreenland"><span class="text-muted">@</span>alexgreenland</a><span class="visible-xs line-height-0"><br></span>
 					<i class="fa fa-spotify icon-spotify"></i> <a class="spotify-link" href="https://open.spotify.com/user/alexphoenix"><span class="text-muted">@</span>alexphoenix</a>
 					<i class="fa fa-camera icon-unsplash"></i> <a class="unsplash-link" href="https://unsplash.com/@ajrg"><span class="text-muted">@</span>ajrg</a><span class="visible-xs line-height-0"><br></span>
