--- a/index.html
+++ b/index.html
@@ -82,14 +82,38 @@ layout: default
     <section id="projects" class="projects">
         <h2>Projects</h2>
 		
-        <!-- box.epiarc -->
-        <section class="box epiarc">
-            <h3 class="plain title">
+        <!-- box.epi -->
+        <section class="box epi">
+            <h3 class="title epi">
                 {% include timeline-interchange.html %}
-                <a href="http://epi.link/">Epi</a>, <a href="http://epiarc.org/">Epiarc</a>
+                <a class="epi-logo" href="http://epi.link/" title="Epi"></a>
             </h3>
             <div class="timeline-item foot">
                 2014 &ndash;
+                <p>
+                    <span class="outlink">
+                        <i class="fa fa-globe"></i>
+                        <a href="http://epi.link/">Epi</a>
+                    </span>
+                </p>
+            </div>
+        </section>
+        <!-- / .box.epi -->
+        
+        <!-- box.epiarc -->
+        <section class="box epi">
+            <h3 class="title epiarc">
+                {% include timeline-interchange.html %}
+                <a class="epiarc-logo" href="http://epiarc.org/" title="Epiarc"></a>
+            </h3>
+            <div class="timeline-item foot">
+                2014 &ndash;
+                <p>
+                    <span class="outlink">
+                        <i class="fa fa-globe"></i>
+                        <a href="http://epiarc.org/">Epiarc</a>
+                    </span>
+                </p>
             </div>
         </section>
         <!-- / .box.epiarc -->
