Update link to Epi

--- a/index.html
+++ b/index.html
@@ -86,14 +86,14 @@ layout: default
         <section class="box epi">
             <h3 class="title epi">
                 {% include timeline-interchange.html %}
-                <a class="epi-logo" href="http://epi.link/" title="Epi"></a>
+                <a class="epi-logo" href="https://epiapp.com/" title="Epi"></a>
             </h3>
             <div class="timeline-item foot">
                 2014 &ndash;
                 <p>
                     <span class="outlink">
                         <i class="fa fa-globe"></i>
-                        <a href="http://epi.link/">Epi</a>
+                        <a href="https://epiapp.com/">Epi</a>
                     </span>
                 </p>
             </div>
